# osu-collect

./: .gitignore  Cargo.toml  README.md  build.sh  config.toml.example  project-requirements.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/: collection.rs  collector.rs  config.rs  downloader.rs  error.rs  main.rs  utils.rs  windows_init.rs
