[package]
name = "osu-collect"
version = "0.0.2"
edition = "2024"
authors = ["uwuclxdy"]
description = "a program to download osu map collections from osu!collector for free"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
indicatif = "0.18.3"
url = "2.5"
toml = "0.9.8"
dirs = "6.0.0"
tokio = { version = "1.42", features = ["full"] }
futures-util = "0.3.31"
osu-db = "0.3.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_Foundation"] }
